[UPDATE] Agregando nuevas palabras claves al módulo

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jldamians",
     "cpe",
     "pse",
-    "ose"
+    "ose",
+    "peru"
   ],
   "author": "jldamians <jlds161089@gmail.com>",
   "license": "ISC",
